fix for modal log-in on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -242,6 +242,28 @@
 
 @media (max-width: 640px) {
 
+  /* modal */
+
+  .modal {
+    position: fixed;
+    top: 3%;
+    right: 3%;
+    left: 3%;
+    width: auto;
+    margin: 0;
+  }
+
+  .modal-body {
+    height: 60%;
+  }
+
+  .modal-body {
+    max-height: 350px;
+    padding: 15px;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
   /* music player section */
 
   #music-container {
